2002-08-08  Zack Weinberg  <zack@codesourcery.com>

	* qm/label.py (Label.SplitLeft): New method.
	* qm/test/database.py (Database.SplitLabelLeft): New method.
	* qm/test/result.py (Result.Annotate): New method.
	(Result.Fail): Use it.

2002-08-08  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (QMException.__init__): New method.
	(PythonException): New class.
	* qm/test/base.py (get_extension_class_from_directory): Raise
	a PythonException.
	* qm/test/cmdline.py (QMTest.__ExecuteRegister): Handle it.
	
2002-08-07  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (load_database): Add documentation.  Adjust call
	to get_extension_class.
	(get_extension_directories): Add database_path parameter.  Search
	the QMTest subdirectory of that directory as well.
	(get_extension_class_names): Add database_path parameter.
	(get_extension_class): Likewise.
	* qm/test/cmdline.py (QMTest.__ExecuteExtensions): Pass it.
	(QMTest.__ExecuteRegister): Likewise.

	* qm/test/execution_engine.py
	(ExecutionEngine._CheckForResponse): Update trace message.  Do
	not block.
	(ExecutionEngine._AddResult): Add consistency check.
	(ExecutionEngine._AddUntestedResult): Mark untested tests as
	running before they are marked as untested.
	
	* qm/test/base.py (get_extension_directories): Make sure the
	QMTest subdirectory of the database is searched
	* qm/test/datbase.py (Database.GetClassPaths): Do not search it
	here.
	* qm/test/doc/reference.xml: Update description of locations
	searched for test classes.

	* GNUmakefile.in (doc-python): Simplify.

	* qm/fields.py (Field.__init__): Check that properties provided
	make sense for this class.

	* qm/test/execution_engine.py (ExecutionEngine.__init__): Set
	__running.
	(ExecutionEngine.RunTests): Use it to detect deadlock.  Remove
	__debug__ guards over all calls to _Trace.
	(ExecutionEngine._AddResult): Decrement running when a test result
	is seen.
	(ExecutionEngine._Trace): Check __debug__ here.