@@ -1,5 +1,8 @@
 2002-08-08  Zack Weinberg  <zack@codesourcery.com>
 
+	* qm/common.py (load_module): If imp.load_module fails,
+	remove the broken object from sys.modules.
+
 	* qm/label.py (Label.SplitLeft): New method.
 	* qm/test/database.py (Database.SplitLabelLeft): New method.
 	* qm/test/result.py (Result.Annotate): New method.
